dapp: fix alignment on the balance card
Without this patch, we have a tiny align items issue in balance card.

This is a problem because items better to be aligned on same baseline.

This patch solves the problem by adding align-items to baseline in the related
scss file.

Issue-URL: https://app.clickup.com/t/3q30m4r

--- a/dapp/src/components/BalanceCard/AddressBalances/styles.scss
+++ b/dapp/src/components/BalanceCard/AddressBalances/styles.scss
@@ -20,6 +20,7 @@
         .balance-box {
             display: flex;
             justify-content: center;
+            align-items: baseline;
 
             .balance {
                 font-weight: $semi-bold-font-weight;
